Adicionando a seção de Usuários. Pausa pro almoço.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -13,10 +13,7 @@
 	</div>
 	
 	<div id="header-navigation" style="float: right">
-    	<a href="<?php echo $this->url(
-        	array('controller'=>'guestbook'),
-        	'default',
-        	true) ?>">Controle de Estoque</a>
+    	<a href="<?php echo $this->url(array('controller' => 'index')) ?>">Início</a>
 	</div>
 </div>
 
