--- a/application/views/scripts/usuario/excluir.phtml
+++ b/application/views/scripts/usuario/excluir.phtml
@@ -1,5 +1,5 @@
 <br /><br />
 <div id="view-content">
-	<p>Deseja realmente <b>excluir</b> o usuário <?php echo $this->usuario->getNome() ?> 
-		(<?php echo $this->usuario->getNomeUsuario() ?>)? <a href="<?php echo $this->url() ?>/opcao/nao">NÃO</a> <a href="<?php echo $this->url() ?>/opcao/sim">Sim</a></p>
+	<p class="excluir">Deseja realmente <b>excluir</b> o usuário <?php echo $this->usuario->getNome() ?> 
+		(<?php echo $this->usuario->getNomeUsuario() ?>)? <br /><br /><a href="<?php echo $this->url() ?>/opcao/nao">NÃO</a> <a href="<?php echo $this->url() ?>/opcao/sim">Sim</a></p>
 </div>
