--- a/application/views/scripts/produto/excluir.phtml
+++ b/application/views/scripts/produto/excluir.phtml
@@ -1,5 +1,5 @@
 <br /><br />
 <div id="view-content">
-	<p>Deseja realmente <b>excluir</b> o produto <?php echo $this->produto->getNome() ?>? 
-	<a href="<?php echo $this->url() ?>/opcao/nao">NÃO</a> <a href="<?php echo $this->url() ?>/opcao/sim">Sim</a></p>
+	<p class="excluir">Deseja realmente <b>excluir</b> o produto "<?php echo $this->produto->getNome() ?>"? <br /><br />
+	<a href="<?php echo $this->url() ?>/opcao/nao">NÃO</a>&nbsp;&nbsp;&nbsp;<a href="<?php echo $this->url() ?>/opcao/sim">Sim</a></p>
 </div>
